--- a/main.css
+++ b/main.css
@@ -7,7 +7,8 @@ body {
   line-height: 1.5em; }
 
 p {
-  margin: 0 0 1em; }
+  margin: 0 0 1em;
+  text-align: justify; }
 
 h1 {
   font-size: 3em;
@@ -48,7 +49,10 @@ section {
   section .row {
     -webkit-columns: 2;
     -moz-columns: 2;
-    columns: 2; }
+    columns: 2;
+    -webkit-column-gap: 2.5rem;
+    -moz-column-gap: 2.5rem;
+    column-gap: 2.5rem; }
 
 * {
   box-sizing: border-box; }
